fix logo stretch & bg

--- a/src/tech-tree.scss
+++ b/src/tech-tree.scss
@@ -95,9 +95,8 @@ a {
   }
 
   img {
-    height: 100px;
+    max-height: 100px;
     margin-bottom: 25px;
-    width: 287.86px;
   }
 
   h1 {
